# aegis-one-simulator

./: .gitignore  AEGIS_ONE_MASTER_PRD.md  Cargo.toml  ENGINEERING_SPEC_V3.md  FINANCIAL_STRATEGY_V3.md  GEMINI.md  GO_TO_MARKET_PLAN.md  LEAN_STARTUP_ROADMAP.md  LICENSE_EVALUATION.md  README.md  STARTUP_ROADMAP.md  YC_APPLICATION.md  aegis_alpha_rtl_v1.v  generate_bom.py  generate_verification_report.py  infinity-cache-proxy-prd.md  launch_demo.ps1  mechanical_audit.py  panic_flush_fsm.v  thermal_comparison.json  thermal_sim.py  ufs_async_persistence.v  verify.ps1  verify.sh
.antigravitycli/: 49e3d156-0f3f-46ab-a00e-38583c205710.json
.planning/debug/: fix-stress-ui-freeze.md
infinity_cache_bench/: Cargo.toml
infinity_cache_bench/src/: main.rs
infinity_cache_core/: Cargo.toml
infinity_cache_core/src/: lib.rs  main.rs
infinity_cache_daemon/: Cargo.toml
infinity_cache_daemon/src/: main.rs
infinity_cache_ui/: README.md  pubspec.yaml
infinity_cache_ui/lib/: main.dart
infinity_cache_ui/lib/core/: router.dart  theme.dart
infinity_cache_ui/lib/screens/: dashboard.dart  interception.dart
infinity_cache_ui/lib/services/: daemon_bridge.dart
infinity_cache_ui/lib/widgets/: sidebar.dart
