[package]
name = "infinity_cache_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "infinity_cache_core"
path = "src/lib.rs"



[features]
default = ["std"]
std = ["tokio/full", "serde/std", "serde_json", "interprocess", "bincode", "futures", "bitvec/std", "rand"]

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
bitvec = { version = "1.0", default-features = false }
rand = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }
interprocess = { version = "1.2.1", features = ["tokio_support"], optional = true }
bincode = { version = "1.3", optional = true }
heapless = { version = "0.8", features = ["serde"] }
spin = "0.9"
