[package]
name = "infinity_cache_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "6.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
interprocess = { version = "1.2.1", features = ["tokio_support"] }
bincode = "1.3"
tokio-tungstenite = "0.21"
futures-util = { version = "0.3", features = ["io"] }
